Using ECS views in a couple more places